k8s/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-be
  template:
    metadata:
      labels:
        app: movies-be
    spec:
      containers:
      - name: movies-be
        image: itamarco/movies-be
        ports:
        - containerPort: 8000
