k8s/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-be
spec:
  selector:
    app: movies-be
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
