k8s/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: movies.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-be
            port:
              number: 8000
